hotfix/if-cond: - 下記コミットの修正漏れ対応。 ba9df65d9e00413112a9e54ec71d97f40c442612

--- a/action.yaml
+++ b/action.yaml
@@ -73,7 +73,7 @@ runs:
 
     - name: Diff files
       run: |
-        if [ "${{ env.TO_QIITA }}" = "ture" ]; then
+        if [ "${{ env.TO_QIITA }}" = "true" ]; then
           cd ${{ inputs.zenn-repo-name }}
         else
           cd ${{ inputs.qiita-repo-name }}
